; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-fork.c_create_file.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-fork.c_create_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@O_WRONLY = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@S_IWUSR = common dso_local global i32 0, align 4
@S_IRUSR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @create_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @create_file(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = load i32, i32* @O_WRONLY, align 4
  %8 = load i32, i32* @O_CREAT, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @S_IWUSR, align 4
  %11 = load i32, i32* @S_IRUSR, align 4
  %12 = or i32 %10, %11
  %13 = call i32 @uv_fs_open(i32* null, i32* %5, i8* %6, i32 %9, i32 %12, i32* null)
  store i32 %13, i32* %3, align 4
  %14 = load i32, i32* %3, align 4
  %15 = icmp sge i32 %14, 0
  %16 = zext i1 %15 to i32
  %17 = call i32 @ASSERT(i32 %16)
  %18 = load i32, i32* %3, align 4
  store i32 %18, i32* %4, align 4
  %19 = call i32 @uv_fs_req_cleanup(i32* %5)
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @uv_fs_close(i32* null, i32* %5, i32 %20, i32* null)
  store i32 %21, i32* %3, align 4
  %22 = load i32, i32* %3, align 4
  %23 = icmp eq i32 %22, 0
  %24 = zext i1 %23 to i32
  %25 = call i32 @ASSERT(i32 %24)
  %26 = call i32 @uv_fs_req_cleanup(i32* %5)
  ret void
}

declare dso_local i32 @uv_fs_open(i32*, i32*, i8*, i32, i32, i32*) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_fs_req_cleanup(i32*) #1

declare dso_local i32 @uv_fs_close(i32*, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
